[gd_scene load_steps=3 format=2]

[ext_resource path="res://Tree.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Control" type="Control" parent="ViewportContainer"]
anchor_left = 1.0
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ViewportContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -58.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 30.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="ViewportContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 30.0
size_flags_vertical = 1
min_value = 1.0
max_value = 5.0
step = 0.25
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
handle_input_locally = false
render_target_update_mode = 3

[node name="Tree" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/Viewport"]
current = true
[connection signal="resized" from="ViewportContainer" to="." method="_on_ViewportContainer_resized"]
[connection signal="pressed" from="ViewportContainer/Control/Button" to="." method="_on_Button_pressed"]
[connection signal="value_changed" from="ViewportContainer/HSlider" to="." method="_on_HSlider_value_changed"]
